# runner_game

./: .gitignore  .travis.yml  Cargo.toml  README.md
content/shader_dev/: bak_light.bak_shader  light.shader  object.shader  screen.shader  shadow.shader  shadow_render.shader  sprite.shader
src/: collision.rs  engine_helper.rs  graphic_item.rs  main.rs  shader_manager.rs  sprite.rs  sprite_manager.rs  text_writer.rs  vertex.rs
src/engine/: GenericControl.rs  camera.rs  collision.rs  dae_processor.rs  engine_helper.rs  foo_object.rs  frame_buffer_manager.rs  generic_camera.rs  generic_object.rs  generic_object_type.rs  graphic_item.rs  graphics_handler.rs  input_manager.rs  layer_type.rs  matrix_helper.rs  mod.rs  model.rs  modules_manager.rs  object_manager.rs  shader_manager.rs  sprite.rs  sprite_manager.rs  teapot.rs  text_writer.rs  vertex.rs
src/engine/controls/: key_action.rs  mod.rs
src/engine/graphic/: camera.rs  engine_helper.rs  frame_buffer_manager.rs  generic_camera.rs  generic_object.rs  generic_object_type.rs  graphic_item.rs  graphics_handler.rs  input_manager.rs  layer_type.rs  mod.rs  model.rs  object_manager.rs  shader_manager.rs  sprite.rs  sprite_manager.rs  text_writer.rs
src/engine/graphic/importer/: mod.rs  obj_importer.rs
src/engine/importer/: obj_importer.rs
src/engine/logic/: entity.rs  hierarchy_manager.rs  mod.rs
src/game_logic/: actor.rs  input_manager.rs  logic_handler.rs  mod.rs  movement.rs  physical_body.rs  text.rs
