[package]
name = "runner_game"
version = "0.2.0"
authors = ["romain <assie.romain@gmail.com>"]

[dependencies]
glium="0.20.0"
image="0.16.0"
time = "0.1"
rand = "0.3"
cgmath = "*"
# winapi = "*"
# gilrs = "0.1.0"
rodio = "*"
xml-rs = "0.7"
notify = "4.0.0"
obj-rs = {version = "0.4", features = ["glium-support"]}

[features]
integration=[]
